# primes

./: .travis.yml  CHANGELOG.md  README.md  bench.json  primes.cabal  stack.yaml
app/: Main.hs
benchmark/: Annalize.hs  Main.hs
src/: Primes.hs  Reified.hs
test/: PrimesSpec.hs
