cabal-version:       2.0
name:                primes
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/Chrisaupshaw/primes
bug-reports:         https://github.com/Chrisaupshaw/primes/issues
license:             MIT
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw.work@gmail.com
copyright:           2020 Christopher A. Upshaw
category:            numerical
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/Chrisaupshaw/primes.git

library
  hs-source-dirs:      src
  exposed-modules:     Primes
                       Prelude
                       Reified

  build-depends:       base-noprelude
                     , relude
                     , vector
                     , template-haskell
                     , attoparsec
                     , text
                     , criterion
                     , console-program

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable primes
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude
                     , primes
                     , vector
                     , relude
                     , console-program

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite primes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PrimesSpec
  build-depends:       base-noprelude
                     , primes
                     , relude
                     , hspec
                     , hspec-golden
                     , QuickCheck
                     , vector

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

benchmark primes-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  other-modules:       Annalize

  build-depends:       base-noprelude
                     , criterion
                     , primes
                     , relude
                     , optparse-applicative
                     , vector
                     , containers
                     , gnuplot
                     , statistics
                     , temporary
                     , aeson
                     , text

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
